2010-12-23 Kazuhiko
* use my_filename instead of my_source_reference in File_view and Image_view.

2010-12-22 Ivan
* Add "Embedded File"  & "Embedded Folder" portal types

2010-12-13 nicolas.dumazet
* Migrate Tools.

2010-11-29 lucas
* Added proxy role in reindex_object_interaction_workflow/scripts/callRecursiveReindexObject to avoid security issues.

2010-11-15 Kazuhiko
* improve Document_getStandardFileName so that the extention in the original filename will be used as the fallback.

2010-10-13 yo
* Drop Decimal Exponent and change Precision to a Float Field (through Proxy Field) in the view of Rounding Model.

2010-10-12 yo
* Fix an error that calculate may be called too early before a new simulation movement is indexed.

2010-10-12 yo
* Tweak the configurations of several interaction workflows for optimization.

2010-09-30 yusei
* Update movement_resource_interaction_workflow and set quantity unit value to movement forcedly if current value is acquired from resource.

2010-09-28 tatuya
* Fix a issue that all the base contribution are not copied when change the resource on a movement.

2010-09-28 tatuya
* Stop overwriting a value by movement_resource_interaraction_workflow when the categories are already set a valid value as the new resource.

2010-09-28 tatuya
* Previous commits(r38692,38707) were not solved the issue that movement_resource_interaction_workflow prevents the delivery buliding. So, revert them.

2010-09-28 tatuya
* Stop to overwriting a value by movement_resource_interaraction_workflow when the movement is created by a builder.

2010-09-28 yo
* Make the interaction update_simulation called only once.

2010-09-22 nicolas.dumazet
* Add OOo Document Portal Type

2010-09-22 tatuya
* Add a movement group to group movements without assignment, by contrast with the assignment movement group.

2010-09-17 yo
* Add an utility script BusinessPath_build which can be used to unify the way of invoking global builds.

2010-09-17 yo