@@ -1,0 +1,44 @@
+##############################################################################
+#
+# Copyright (c) 2006 Nexedi SARL and Contributors. All Rights Reserved.
+#          Ivan Tyagov <ivan@nexedi.com>
+#
+# WARNING: This program as such is intended to be used by professional
+# programmers who take the whole responsability of assessing all potential
+# consequences resulting from its eventual inadequacies and bugs
+# End users who are looking for a ready-to-use solution with commercial
+# garantees and support are strongly adviced to contract a Free Software
+# Service Company
+#
+# This program is Free Software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+#
+##############################################################################
+
+def migrateToEmbeddedFile(self):
+  """ Migrate all embedded "File" and "Image" 
+     objects to an unified "Embedded File
+  """
+  from Products.ERP5.Extensions.CheckPortalTypes import changeObjectClass
+  from Products.ERP5.Document.EmbeddedFile import EmbeddedFile
+  
+  if self.getPortalType() in ('File', 'Image',) and \
+    self.getValidationState()=='embedded':
+    changeObjectClass(self.getParentValue(), self.id, EmbeddedFile)
+    instance = getattr(self.getParentValue(), self.id)
+    instance.portal_type = EmbeddedFile.portal_type
+    instance.reindexObject()
+    self.log("Migrated %s" %self.getRelativeUrl())
+    return self.getRelativeUrl()
+  
