@@ -1,3 +1,4 @@
+portal_alarms/upgrader_migrate_to_embedded_file
 portal_caches/document_cache_factory
 portal_caches/document_cache_factory/**
 portal_categories/collect_order_group/cell
